# wabt

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  turbo.md  ubsan.blacklist
libc-interp/: libc-interp.cpp  mandelbrot.wasm  syscall.cpp  syscall.hpp
src/: binary-reader-interp.cc  interp.cc  interp.h
src/interp/: binary-reader-interp.cc  interp-disassemble.cc  interp-internal.h  interp-trace.cc  interp.cc  interp.h
src/jit/: CMakeLists.txt  README.md  environment.cc  environment.h  function-builder.cc  function-builder.h  stack.cc  stack.h  thread.h  thunk.cc  thunk.h  type-dictionary.cc  type-dictionary.h  vms_hack.cc  wabtjit.cc  wabtjit.h
src/tools/: spectest-interp.cc  wasm-interp.cc
test/: run-gen-wasm-interp.py  run-interp.py  run-jit-perform.py  run-tests.py
test/help/: wasm-interp.txt
test/interp/: logging-all-opcodes.txt  tracing-all-opcodes.txt
test/jit/: alloca_dropkeep.txt  br.txt  brif_brunless.txt  call.txt  call_complex.txt  callindirect.txt  ext_load.txt  f32_arithmetic.txt  f32_comparison.txt  f32_min_max.txt  f64_arithmetic.txt  f64_comparison.txt  f64_min_max.txt  float_convert.txt  get_set_global.txt  get_set_tee_local.txt  i32_arithmetic.txt  i32_bitwise.txt  i32_comparison.txt  i64_arithmetic.txt  i64_bitwise.txt  i64_comparison.txt  int_convert.txt  load.txt  multi_value.txt  reinterpret.txt  return_three.txt  select.txt  sign_ext.txt  stack_trace.txt  stack_trace_comp_fail.txt  store.txt  truncation.txt  truncation_saturating.txt  wrap_store.txt
